@@ -234,6 +234,13 @@ t/cfg/split-yaml/i18n.pot
 t/cfg/split-yaml/i18n.vi.po
 t/cfg/split-yaml/po4a.cfg
 t/cfg/split-yaml/vi.yaml
+t/cfg/single-emptypo/_fr.po
+t/cfg/single-emptypo/_output
+t/cfg/single-emptypo/_single.man.fr.1
+t/cfg/single-emptypo/fr.po
+t/cfg/single-emptypo/po4a.conf
+t/cfg/single-emptypo/single.man.1
+t/cfg/single-emptypo/single.pot
 t/cfg/single-nopotpo/single.man.1
 t/cfg/single-nopotpo/po4a.conf
 t/cfg/single-nopotpo/_single.pot
