@@ -1756,7 +1756,16 @@ if ( not $po4a_opts{"no-update"} ) {
               ( find_input_file( $po_filename{$lang} ), find_output_file( $po_filename{$lang} ) );
             my $updated_potfile = find_input_file($pot_filename);
 
+            my $usable_pofile = 0;
             if ( -e $infile ) {
+
+                # Check that the po file is not empty, as msgmerge has issues in this case (see Debian's #1022216 and GitHub's #442)
+
+                my $pofile = Locale::Po4a::Po->new();
+                $pofile->read( $infile, undef, 0 );    # Guess the charset ; Don't fail if msgfmt spits an error
+                $usable_pofile = 1 if ( $pofile->count_entries() > 0 );
+            }
+            if ($usable_pofile) {
                 my $dir = dirname($outfile);
                 if ( not -d $dir ) {
                     mkdir $dir or die wrap_msg( gettext("Cannot create directory '%s': %s"), $dir, $! );
@@ -1765,7 +1774,7 @@ if ( not $po4a_opts{"no-update"} ) {
                 my $msgmerge_opt = $po4a_opts{"msgmerge-opt"};
                 $msgmerge_opt =~ s/\$lang\b/$lang/g if scalar @langs;
                 my $cmd = "msgmerge" . $Config{_exe} . " \"$infile\" \"$updated_potfile\" " . $msgmerge_opt;
-                if ( $infile eq $outfile ) {    # in place
+                if ( $infile eq $outfile ) {           # in place
                     $cmd .= " --backup=none --update";
                 } else {
                     $cmd .= " --output \"$outfile\"";
@@ -1785,6 +1794,14 @@ if ( not $po4a_opts{"no-update"} ) {
                 }
 
             } else {
+                if ( $po4a_opts{"verbose"} ) {
+                    if ( $po4a_opts{'split'} ) {
+                        printf( gettext("Creating an empty PO file for the language %s.\n"), $lang );
+                    } else {
+                        printf( gettext("Creating an empty PO file in %s.\n"), $po_filename{$lang} );
+                    }
+                }
+
                 my $read_pot_filename = find_input_file($pot_filename);
                 my $cmd =
                   "msginit$Config{_exe} -i \"$read_pot_filename\" --locale $lang -o \"$outfile\" --no-translator >$devnull";
