@@ -1,4 +1,8 @@
 Updating multiple.pot: (4 entries)
+Creating an empty PO file in multiple.de.po.
+Creating an empty PO file in multiple.es.po.
+Creating an empty PO file in multiple.fr.po.
+Creating an empty PO file in multiple.it.po.
 Discard multiple.man.de.1 (0 of 4 strings; only 0% translated; need 80%).
 Discard multiple.man.es.1 (0 of 4 strings; only 0% translated; need 80%).
 Discard multiple.man.fr.1 (0 of 4 strings; only 0% translated; need 80%).
