@@ -1,0 +1,3 @@
+Updating single.pot: (4 entries)
+Creating an empty PO file in fr.po.
+single.man.fr.1 is 0% translated (0 of 4 strings).
