@@ -1,0 +1,10 @@
+.\"*******************************************************************
+.\"
+.\" This file was generated with po4a. Translate the source file.
+.\"
+.\"*******************************************************************
+.TH test1 1   
+.SH NAME
+test \- just a test
+
+UTF in msgid is sometimes difficult, but mandatory for some nämes.
