@@ -1,0 +1,5 @@
+[po4a_paths] single.pot fr:fr.po
+
+[options] opt:"--verbose --keep 0 "
+
+[type:man] single.man.1 fr:single.man.fr.1
