@@ -1,0 +1,5 @@
+.TH test1 1
+.SH NAME
+test \- just a test
+
+UTF in msgid is sometimes difficult, but mandatory for some nämes.
