@@ -1,2 +1,3 @@
 Creating single.pot: (4 entries)
+Creating an empty PO file in single.fr.po.
 Discard single.man.fr.1 (0 of 4 strings; only 0% translated; need 80%).
