@@ -2,5 +2,5 @@ Using '.' as a po_directory.
 Found language 'fr' in the provided po_directory: ./fr.po
 Found POT file './single.pot' in the provided po_directory.
 Updating ./single.pot: (4 entries)
-Updating ./fr.po: 0 translated messages, 4 untranslated messages.
+Creating an empty PO file in ./fr.po.
 Discard single.man.fr.1 (0 of 4 strings; only 0% translated; need 80%).
