@@ -3,6 +3,8 @@ The translation of master file 'first.man' in language 'de' is missing (file: fi
 The translation of master file 'second.man' in language 'de' is missing (file: second.man.de.po) -- skipping.
 The translation of master file 'first.man' in language 'fr' is missing (file: first.man.fr.po) -- skipping.
 The translation of master file 'second.man' in language 'fr' is missing (file: second.man.fr.po) -- skipping.
+Creating an empty PO file for the language de.
+Creating an empty PO file for the language fr.
 Discard first.man.de (0 of 5 strings; only 0% translated; need 80%).
 Discard second.man.de (0 of 5 strings; only 0% translated; need 80%).
 Discard first.man.fr (0 of 5 strings; only 0% translated; need 80%).
