@@ -1,1 +1,2 @@
 Creating list.pot: (2 entries)
+Creating an empty PO file in up.po.
