@@ -68,6 +68,8 @@ General:
 po4a main script (the deprecated po4a-* scripts are still buggy):
  * Deal properly with CRLF files coming from windows (GitHub's #409).
  * Allow to escape spaces in file names, or to quote them (GitHub's #412).
+ * Do not pass empty PO files to msgmerge, as it stumbles on such things when
+   the POT file has UTF chars in the msgids. (GitHub's #442) [Mt]
 
 po4a-translate:
  * Remove the wrap-po option that was not used internally.
